Small changes here and there. Good work tonight. 0240am. You deserve a rest, buddy.

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,3 +2,11 @@
     width: 30%;
     height: auto;
 }
+
+#stepIntotheFuture{
+    font-family: 'Arizonia', cursive;
+    color: #0377ac;
+    text-decoration: underline;
+    text-decoration-color: lightslategrey;
+    text-decoration-style: solid;
+}
