Changing all the default arguments for the panoramas. Testing.

--- a/css/style.css
+++ b/css/style.css
@@ -1259,3 +1259,11 @@ ul.portfolio-image li .desc{
   height: auto;
   text-align: center;
 }
+
+#stepIntotheFuture{
+  font-family: 'Arizonia', cursive;
+  color: #0377ac;
+  text-decoration: underline;
+  text-decoration-color: lightslategrey;
+  text-decoration-style: solid;
+}
