Changing all the default arguments for the panoramas. Testing.

--- a/css/style.css
+++ b/css/style.css
@@ -1260,7 +1260,7 @@ ul.portfolio-image li .desc{
   text-align: center;
 }
 
-#stepIntotheFuture{
+#step{
   font-family: 'Arizonia', cursive;
   color: #0377ac;
   text-decoration: underline;
