--- a/css/style.css
+++ b/css/style.css
@@ -1266,4 +1266,5 @@ ul.portfolio-image li .desc{
   text-decoration: underline;
   text-decoration-color: lightslategrey;
   text-decoration-style: solid;
+  size: 24px;
 }
