Changing all the default arguments for the panoramas. Testing.

--- a/css/style.css
+++ b/css/style.css
@@ -1259,6 +1259,10 @@ ul.portfolio-image li .desc{
   border: 15px solid #004700;
 }
 
+#Soda{
+  border: 15px solid #ffc400;
+}
+
 #demoVideo{
   text-align: center;
 }
