--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ p {
 
 /*----------------------------------------- 6) Hero --------------------------------------------------*/
 #home {
-  background: url('../assets/img/multnomahFalls.jpg');
+  background: url('../images/multnomahFalls.jpg');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
