--- a/css/style.css
+++ b/css/style.css
@@ -1291,7 +1291,7 @@ ul.portfolio-image li .desc{
 
 #mainLogo{
   position: absolute;
-  width: 300px;
+  width: 32.5%;
   top: 100px;
   left: 60px;
 }
