About Us changes to Jajuan.

--- a/css/style.css
+++ b/css/style.css
@@ -1261,6 +1261,14 @@ ul.portfolio-image li .desc{
   border: 15px solid #ffc400;cd 
 }
 
+#Jajuan{
+  border: 15px solid #ed631d;
+}
+
+#Anthony{
+  border: 15px solid #ffc400;cd 
+}
+
 #demoVideo{
   text-align: center;
 }
