--- a/css/style.css
+++ b/css/style.css
@@ -1266,7 +1266,7 @@ ul.portfolio-image li .desc{
 }
 
 #Anthony{
-  border: 15px solid #ffc400;cd 
+  border: 15px solid #680000;cd 
 }
 
 #demoVideo{
@@ -1302,4 +1302,35 @@ ul.portfolio-image li .desc{
   width: 32.5%;
   top: 100px;
   left: 60px;
+}
+
+.portfolioPano-left{
+  width: 60%;
+  height: 350px;
+  border: 1px solid black;
+  text-align: center;
+  float: left;
+  margin: 20px;
+}
+.portfolioDesc-right{
+width: 25%;
+height: 300px;
+float: right;
+text-align: center;
+margin: 20px;
+}
+.portfolioPano-right{
+  width: 60%;
+  height: 350px;
+  border: 1px solid black;
+  text-align: center;
+  float: right;
+  margin: 20px;
+}
+.portfolioDesc-left{
+width: 25%;
+height: 300px;
+float: left;
+text-align: center;
+margin: 20px;
 }
