--- a/css/style.css
+++ b/css/style.css
@@ -1304,33 +1304,23 @@ ul.portfolio-image li .desc{
   left: 60px;
 }
 
-.portfolioPano-left{
-  width: 60%;
-  height: 350px;
-  border: 1px solid black;
+#multnomahFalls,
+#percivalLanding,
+#broadStreet,
+#driveway,
+#crossroads {
+  height: 450px;
+}
+
+.descriptiveAdditions{
+  font-family: 'Arizonia', cursive;
+  color: black;
   text-align: center;
-  float: left;
-  margin: 20px;
+  bottom: 25px;
+  background: #0377ac;
 }
-.portfolioDesc-right{
-width: 25%;
-height: 300px;
-float: right;
-text-align: center;
-margin: 20px;
-}
-.portfolioPano-right{
-  width: 60%;
-  height: 350px;
-  border: 1px solid black;
-  text-align: center;
-  float: right;
-  margin: 20px;
-}
-.portfolioDesc-left{
-width: 25%;
-height: 300px;
-float: left;
-text-align: center;
-margin: 20px;
+
+.skillLogo{
+  height: 25px;
+  width: auto;
 }
