--- a/css/style.css
+++ b/css/style.css
@@ -1299,9 +1299,10 @@ ul.portfolio-image li .desc{
 
 #mainLogo{
   position: absolute;
-  width: 32.5%;
-  top: 100px;
-  left: 60px;
+  height: 67.5%;
+  top: -75px;
+  left: 10px;
+  
 }
 
 #multnomahFalls,
